--- a/cerbero2/config.json
+++ b/cerbero2/config.json
@@ -1,22 +1,30 @@
 {
-    "services": [
-      {
-        "name": "Service 1",
-        "mode": "b",
-        "protocol": "udp",
-        "dport": 8080,
-        "regexList": [
-          "(es1)"
-        ]
-      },
-      {
-        "name": "Service 2",
-        "mode": "b",
-        "protocol": "tcp",
-        "dport": 8181,
-        "regexList": [
-          "(es2)"
-        ]
+  "services": [
+    {
+      "name": "test tipo py",
+      "protocol": "tcp",
+      "dport": 8000,
+      "rulesList": {
+        "blacklist":[
+          {
+            "type":"regex",
+            "filters":[
+              "helo"
+            ]
+          },
+          {
+            "type":"base",
+            "filters":[
+              "64",
+              "32",
+              "58"
+            ]
+          } 
+        ],
+        "whitelist":[
+          
+        ]                   
       }
-    ]
+    }
+  ]
 }
