Minor changes and stats concept

--- a/cerbero2/config.json
+++ b/cerbero2/config.json
@@ -1,9 +1,9 @@
 {
   "services": [
     {
-      "name": "test tipo py",
+      "name": "test_service",
       "protocol": "tcp",
-      "dport": 8000,
+      "dport": 8083,
       "rulesList": {
         "blacklist": [
           {
