--- a/cerbero2/Dockerfile
+++ b/cerbero2/Dockerfile
@@ -2,7 +2,7 @@ FROM golang:1.17-alpine
 
 WORKDIR /app
 
-COPY go.mod ./
+COPY go.mod go.sum config.json ./
 RUN go mod download
 
 COPY *.go ./
@@ -11,4 +11,6 @@ RUN go build -o /cerbero
 
 EXPOSE 8082
 
-CMD [ "/cerbero" ]
+RUN apk add --no-cache sudo
+
+CMD ["sudo", "/cerbero" ]
