--- a/cerbero/config.json
+++ b/cerbero/config.json
@@ -4,20 +4,10 @@
         "name": "Service 1",
         "nfq": 100,
         "mode": "b",
-        "protocol": "udp",
-        "dport": 8080,
-        "regexList": [
-          "(es1)"
-        ]
-      },
-      {
-        "name": "Service 2",
-        "nfq": 101,
-        "mode": "b",
         "protocol": "tcp",
-        "dport": 8181,
+        "dport": 8000,
         "regexList": [
-          "(es2)"
+          "helo"
         ]
       }
     ]
