--- a/cerbero2/config.json
+++ b/cerbero2/config.json
@@ -17,6 +17,24 @@
           
         ]                   
       }
+    },
+    {
+      "name": "mainstage",
+      "protocol": "tcp",
+      "dport": 3300,
+      "rulesList": {
+        "blacklist": [
+          {
+            "type":"regex",
+            "filters":[
+              "helo"
+            ]
+          }
+        ],
+        "whitelist":[
+          
+        ]                   
+      }
     }
   ]
 }
