changed regex matching algo & cleaning

--- a/cerbero2/config.json
+++ b/cerbero2/config.json
@@ -9,7 +9,7 @@
           {
             "type":"regex",
             "filters":[
-              "helo"
+              "(?i)cio"
             ]
           }
         ],
