some debugging logs and new metrics monitor

--- a/cerbero2/config.json
+++ b/cerbero2/config.json
@@ -19,9 +19,9 @@
       }
     },
     {
-      "name": "mainstage",
+      "name": "test_service2",
       "protocol": "tcp",
-      "dport": 3300,
+      "dport": 8085,
       "rulesList": {
         "blacklist": [
           {
