--- a/cerbero2/config.json
+++ b/cerbero2/config.json
@@ -9,8 +9,7 @@
           {
             "type":"regex",
             "filters":[
-              "(?i)cia", 
-              ".*"
+              "(?i)cia"
             ]
           }
         ],
@@ -29,6 +28,24 @@
             "type":"regex",
             "filters":[
               "(?i)helo"
+            ]
+          }
+        ],
+        "whitelist":[
+          
+        ]                   
+      }
+    },
+    {
+      "name": "test_service-NC",
+      "protocol": "tcp",
+      "dport": 8084,
+      "rulesList": {
+        "blacklist": [
+          {
+            "type":"regex",
+            "filters":[
+              "(?i)cia"
             ]
           }
         ],
