fixing sniirful mistakes

--- a/cerbero2/config.json
+++ b/cerbero2/config.json
@@ -9,8 +9,8 @@
           {
             "type":"regex",
             "filters":[
-              "(?i)cia", 
-              ".*"
+              "(?i)cia",
+	      "bruh"
             ]
           }
         ],
