added socket for updating the file and also used fsnotify to wait for file changes

--- a/src/config.json
+++ b/src/config.json
@@ -6,7 +6,12 @@
         "port": 80,
         "regex_list": [
             "ciaociao",
-            "provaprova"
+            "provaprova",
+            "diocane ",
+            "provaaaaaa",
+            "hahaha",
+            "ciau",
+            "ciau ancora!!!"
         ]
     },
     {
