done some refactoring and added some logging

--- a/src/config.json
+++ b/src/config.json
@@ -7,11 +7,8 @@
         "regex_list": [
             "ciaociao",
             "provaprova",
-            "diocane ",
             "provaaaaaa",
-            "hahaha",
-            "ciau",
-            "ciau ancora!!!"
+            "hahaha2"
         ]
     },
     {
