--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,6 +14,6 @@ jobs:
           node-version: 18
       - name: Lint
         run: |
-          cd frontend
+          cd web/frontend/
           npm i
           npm run lint
