build(backend): enable node module resolution
Enable typescript module resolution in node (import modules without .ts
extension) with `--experimental-specifier-resolution=node`
Add `start` & `build` npm scripts

--- a/web/backend/package.json
+++ b/web/backend/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "nodemon --exec ts-node --esm src/index.ts",
-    "lint": "eslint . --ext ts --report-unused-disable-directives --max-warnings 0"
+    "build": "tsc",
+    "dev": "nodemon --experimental-specifier-resolution=node --watch . src/index.ts",
+    "lint": "eslint . --ext ts --report-unused-disable-directives --max-warnings 0",
+    "start": "node --experimental-specifier-resolution=node dist/index.js"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
