--- a/web/backend/package.json
+++ b/web/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "redis": "^4.6.11",
     "zod": "^3.22.4"
   },
   "devDependencies": {
