--- a/.github/workflows/web-backend-build.yml
+++ b/.github/workflows/web-backend-build.yml
@@ -21,5 +21,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: cerbero-backend
-          path: dist
+          path: web/backend/dist
 
