--- a/.github/workflows/web-frontend-build.yml
+++ b/.github/workflows/web-frontend-build.yml
@@ -21,5 +21,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: cerbero-frontend
-          path: dist
+          path: web/frontend/dist
 
