--- a/.github/workflows/web-frontend-docker-build.yml
+++ b/.github/workflows/web-frontend-docker-build.yml
@@ -28,7 +28,7 @@ jobs:
         uses: dawidd6/action-download-artifact@v3
         with:
           name: cerbero-frontend # artifact name
-          path: dist # the artifact is extracted into this directory
+          path: web/frontend/dist # the artifact is extracted into this directory
           workflow: web-frontend-build.yml
           workflow_conclusion: success
           github_token: ${{ secrets.GITHUB_TOKEN }}
