--- a/.github/workflows/web-backend-docker-build.yml
+++ b/.github/workflows/web-backend-docker-build.yml
@@ -1,9 +1,8 @@
 name: web-backend-docker-build
 
 on:
-  push:
-    tags:
-      - '*'
+  release:
+    type: published
 
 env:
   REGISTRY: ghcr.io
