--- a/.github/workflows/firewall-build.yml
+++ b/.github/workflows/firewall-build.yml
@@ -31,5 +31,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: cerbero
-          path: firewall/cerbero3
+          path: firewall/cerbero
 
