chore: proxy api requests to port 80 and bind socket only to localhost
1. All `/api` requests from the frontend are proxied to `http://cerbero-backend`
on port 80, therefore the `API_PORT` environment variable MUST be set to
80 for now.
2. Bind the tcp socket only to `127.0.0.1` in the `docker-compose` file.

--- a/web/frontend/nginx.conf
+++ b/web/frontend/nginx.conf
@@ -18,7 +18,7 @@ http {
         }
 
         location /api/ {
-            proxy_pass http://cerbero-backend:8080;
+            proxy_pass http://cerbero-backend;
         }
     }
 }
