--- a/.github/workflows/web-backend-lint.yml
+++ b/.github/workflows/web-backend-lint.yml
@@ -1,9 +1,10 @@
-name: web-lint
+name: web-backend-lint
 
 on:
   pull_request:
     paths:
-      - web/**
+      - web/backend/**.ts
+      - web/backend/.eslintrc.cjs
 
 jobs:
   lint:
@@ -11,15 +12,12 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+
       - name: Setup node
         uses: actions/setup-node@v3
         with:
           node-version: 18
-      - name: Lint frontend
-        run: |
-          cd web/frontend/
-          npm ci
-          npm run lint
+
       - name: Lint backend
         run: |
           cd web/backend/
