ci(web): and the backend...

--- a/.github/workflows/web-backend-docker-build.yml
+++ b/.github/workflows/web-backend-docker-build.yml
@@ -7,7 +7,7 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: k1nd4sus/cerbero-backend
-  PATH: web/backend
+  BUILD_PATH: web/backend
   ARTIFACT_NAME: cerbero-backend
   WORKFLOW: web-backend-build.yml
 
@@ -32,7 +32,7 @@ jobs:
         uses: dawidd6/action-download-artifact@v3
         with:
           name: ${{ env.ARTIFACT_NAME }} # artifact name
-          path: ${{ env.PATH }}/dist # the artifact is extracted into this directory
+          path: ${{ env.BUILD_PATH }}/dist # the artifact is extracted into this directory
           workflow: ${{ env.WORKFLOW }}
           workflow_conclusion: success
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -44,7 +44,7 @@ jobs:
       
       - name: Build image
         run: |
-          cd ${{ env.PATH }}
+          cd ${{ env.BUILD_PATH }}
           podman build -t ${{ matrix.platform }} --arch ${{ matrix.platform }} .
           podman save -o ${{ matrix.platform }} ${{ matrix.platform }}
       
@@ -52,7 +52,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: '${{ matrix.platform }}'
-          path: ${{ env.PATH }}/${{ matrix.platform }}
+          path: ${{ env.BUILD_PATH }}/${{ matrix.platform }}
           if-no-files-found: error
           retention-days: 1
 
