--- a/.github/workflows/web-frontend-docker-build.yml
+++ b/.github/workflows/web-frontend-docker-build.yml
@@ -73,6 +73,8 @@ jobs:
       
       - name: Download artifacts
         uses: actions/download-artifact@v4
+        with:
+          merge-multiple: true
 
       - name: Registry login
         run: echo "${{ secrets.GITHUB_TOKEN }}" | podman login -u ${{ github.actor }} --password-stdin ${{ env.REGISTRY }}
