ci(web): fix podman manifest push

--- a/.github/workflows/web-backend-docker-build.yml
+++ b/.github/workflows/web-backend-docker-build.yml
@@ -85,4 +85,4 @@ jobs:
           podman manifest add ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ matrix.tags }} docker-archive:amd64
           podman manifest add ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ matrix.tags }} docker-archive:arm64
           podman manifest inspect ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ matrix.tags }}
-          podman manifest push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ matrix.tags }}
+          podman manifest push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ matrix.tags }} ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ matrix.tags }}
