--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,9 +6,22 @@ on:
       - '*'
 
 jobs:
+  check-tag:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check tag format
+        run: |
+          if [[ ${{ github.ref_name }} =~ ^refs\/tags\/(?P<major>0|[1-9]\d*)\.(?P<minor>0|[1-9]\d*)\.(?P<patch>0|[1-9]\d*)(?:-(?P<prerelease>(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+(?P<buildmetadata>[0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$ ]]; then
+            echo "Tag format is valid: ${{ github.ref_name }}"
+          else
+            echo "Invalid tag format: ${{ github.ref_name }}"
+            exit 1
+          fi
+
   release-gh:
     name: Release on GitHub
     runs-on: ubuntu-latest
+    needs: check-tag
     steps:
       - name: Checkout
         uses: actions/checkout@v4
