ci(firewall-lint): refactor steps names

--- a/.github/workflows/firewall-lint.yml
+++ b/.github/workflows/firewall-lint.yml
@@ -12,11 +12,15 @@ jobs:
     name: lint
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-go@v5
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Setup go
+      uses: actions/setup-go@v5
       with:
         go-version: '1.21.4'
-    - name: golangci-lint
+
+    - name: Lint firewall
       uses: golangci/golangci-lint-action@v5
       with:
         version: v1.57
